--- a/Tema3/app/src/main/res/layout/activity_main.xml
+++ b/Tema3/app/src/main/res/layout/activity_main.xml
@@ -21,15 +21,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
+        app:backgroundTint="@color/verde"
         tools:layout_editor_absoluteX="82dp"
-        tools:layout_editor_absoluteY="274dp" />
+        tools:layout_editor_absoluteY="274dp"
+        tools:text="@string/continuar" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
+        app:backgroundTint="@color/rojo"
         tools:layout_editor_absoluteX="297dp"
-        tools:layout_editor_absoluteY="277dp" />
+        tools:layout_editor_absoluteY="277dp"
+        tools:text="@string/cancelar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
