--- a/Tema3/app/src/main/res/values/colors.xml
+++ b/Tema3/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="rojo">#FF1202</color>
+    <color name="azul">#0055FF</color>
+    <color name="verde">#19F600</color>
 </resources>
