--- a/Tema5/ListaOptimizada/app/src/main/res/layout/activity_main.xml
+++ b/Tema5/ListaOptimizada/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,6 @@
     android:id="@+id/recView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F85C5C">
+    android:background="#050505">
 
 </androidx.recyclerview.widget.RecyclerView>
